<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rules.RulesFragment">

    <ImageView
        android:id="@+id/imageViewRules"
        android:layout_width="434dp"
        android:layout_height="198dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/rulFragment_photo"
        android:scaleType="fitXY"
        android:src="@drawable/fis_rules_fragment"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRules">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textR1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/rulFragment_titlu1"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRules1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:padding="6sp"
                android:text="@string/rulFragment_text1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textR2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/rulFragment_titlu2"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRules2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:padding="6sp"
                android:text="@string/rulFragment_text2"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textR3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/rulFragment_titlu3"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRules3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:padding="6sp"
                android:text="@string/rulFragment_text3"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textR4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/rulFragment_titlu4"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRules4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:padding="6sp"
                android:text="@string/rulFragment_text4"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/textR5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/rulFragment_titlu5"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRules5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:padding="6sp"
                android:text="@string/rulFragment_text5"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/textR6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/rulFragment_titlu6"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRules6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:padding="6sp"
                android:text="@string/rulFragment_text6"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/textR7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/rulFragment_titlu7"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRules7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:text="@string/rulFragment_text7"
                android:textSize="15sp"
                android:padding="6sp"/>


            <TextView
                android:id="@+id/textR8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/rulFragment_titlu8"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRules8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:text="@string/rulFragment_text8"
                android:textSize="15sp"
                android:padding="6sp"/>


            <TextView
                android:id="@+id/textR9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/rulFragment_titlu9"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRules9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:text="@string/rulFragment_text9"
                android:textSize="15sp"
                android:padding="6sp"/>


            <TextView
                android:id="@+id/textR10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/rulFragment_titlu10"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textRules10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:text="@string/rulFragment_text10"
                android:textSize="15sp"
                android:padding="6sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>