<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="351dp">

            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="276dp"
                android:layout_marginTop="72dp"
                android:fontFamily="monospace"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView130"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="60dp"
                android:fontFamily="monospace"
                android:text="@string/home_username"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView131"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:fontFamily="monospace"
                android:text="@string/home_password"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView130" />


            <EditText
                android:id="@+id/home_email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="53dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:theme="@style/MyEditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView130"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/home_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:inputType="textPassword"
                android:theme="@style/MyEditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView131"
                app:layout_constraintTop_toBottomOf="@+id/home_email" />

            <Button
                android:id="@+id/home_button_login"
                android:layout_width="193dp"
                android:layout_height="43dp"
                android:layout_marginStart="109dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="109dp"
                android:backgroundTint="@color/button"
                android:fontFamily="monospace"
                android:text="@string/home_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_password"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/home_adminlogin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:fontFamily="monospace"
                android:text="@string/home_login_admin"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_button_login" />

            <TextView
                android:id="@+id/text87"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="51dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="51dp"
                android:fontFamily="monospace"
                android:text="@string/home_or"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/home_register_button"
                app:layout_constraintStart_toEndOf="@+id/home_adminlogin_button"
                app:layout_constraintTop_toBottomOf="@+id/home_button_login" />

            <TextView
                android:id="@+id/home_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="58dp"
                android:clickable="true"
                android:fontFamily="monospace"
                android:text="@string/home_register"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_button_login" />

            <TextView
                android:id="@+id/home_forgot_pass_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="144dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="145dp"
                android:clickable="true"
                android:fontFamily="monospace"
                android:text="@string/home_forgot"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text87" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>